<resources>
    <string name="app_name">Lab3</string>
    <string name="userName">Some random user</string>
    <string name="userAddress">Some random address</string>
    <string name="comment">Some random comment</string>
    <string name="editButton">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="exit">Exit</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>